// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`beta version 1`] = `
{
  "win": [
    {
      "arch": "arm64",
      "file": "Test App ßW Setup 3.0.0-beta.2-arm64.exe",
      "safeArtifactName": "TestApp-Setup-3.0.0-beta.2-arm64.exe",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test App ßW Setup 3.0.0-beta.2-arm64.exe.blockmap",
      "safeArtifactName": "TestApp-Setup-3.0.0-beta.2-arm64.exe.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "arch": "x64",
      "file": "Test App ßW Setup 3.0.0-beta.2.exe",
      "safeArtifactName": "TestApp-Setup-3.0.0-beta.2.exe",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test App ßW Setup 3.0.0-beta.2.exe.blockmap",
      "safeArtifactName": "TestApp-Setup-3.0.0-beta.2.exe.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`icon < 256 1`] = `"ERR_ICON_TOO_SMALL"`;

exports[`icon not an image 1`] = `"ERR_ICON_UNKNOWN_FORMAT"`;

exports[`win zip 1`] = `
{
  "win": [
    {
      "arch": "arm64",
      "file": "Test App ßW-1.1.0-arm64-win.zip",
      "safeArtifactName": "TestApp-1.1.0-arm64-win.zip",
    },
    {
      "arch": "x64",
      "file": "Test App ßW-1.1.0-win.zip",
      "safeArtifactName": "TestApp-1.1.0-win.zip",
    },
  ],
}
`;

exports[`win zip 2`] = `
[
  "chrome_100_percent.pak",
  "chrome_200_percent.pak",
  "ffmpeg.dll",
  "icudtl.dat",
  "libEGL.dll",
  "libGLESv2.dll",
  "LICENSE.electron.txt",
  "LICENSES.chromium.html",
  "locales/",
  "resources/",
  "resources/app.asar",
  "resources/extraAsar.asar",
  "resources/subdir/",
  "resources/subdir/extraAsar2.asar",
  "resources.pak",
  "snapshot_blob.bin",
  "Test App ßW.exe",
  "v8_context_snapshot.bin",
  "vk_swiftshader.dll",
  "vk_swiftshader_icd.json",
  "vulkan-1.dll",
]
`;

exports[`win zip 3`] = `
[
  {
    "alg": "SHA256",
    "file": "resources\\app.asar",
    "value": "hash",
  },
  {
    "alg": "SHA256",
    "file": "resources\\extraAsar.asar",
    "value": "hash",
  },
  {
    "alg": "SHA256",
    "file": "resources\\subdir\\extraAsar2.asar",
    "value": "hash",
  },
]
`;

exports[`win zip 4`] = `
[
  "chrome_100_percent.pak",
  "chrome_200_percent.pak",
  "ffmpeg.dll",
  "icudtl.dat",
  "libEGL.dll",
  "libGLESv2.dll",
  "LICENSE.electron.txt",
  "LICENSES.chromium.html",
  "locales/",
  "resources/",
  "resources/app.asar",
  "resources/extraAsar.asar",
  "resources/subdir/",
  "resources/subdir/extraAsar2.asar",
  "resources.pak",
  "snapshot_blob.bin",
  "Test App ßW.exe",
  "v8_context_snapshot.bin",
  "vk_swiftshader.dll",
  "vk_swiftshader_icd.json",
  "vulkan-1.dll",
]
`;

exports[`win zip 5`] = `
[
  {
    "alg": "SHA256",
    "file": "resources\\app.asar",
    "value": "hash",
  },
  {
    "alg": "SHA256",
    "file": "resources\\extraAsar.asar",
    "value": "hash",
  },
  {
    "alg": "SHA256",
    "file": "resources\\subdir\\extraAsar2.asar",
    "value": "hash",
  },
]
`;

exports[`zip artifactName 1`] = `
{
  "win": [
    {
      "arch": "x64",
      "file": "Test App ßW-1.1.0-win-x64.zip",
      "safeArtifactName": "TestApp-1.1.0-win.zip",
    },
  ],
}
`;
